testing/RESTFullApiSample/Product API/api/errors/forbidden/Demonstrates a 403 Forbidden error.bru
meta {
  name: Demonstrates a 403 Forbidden error
  type: http
  seq: 1
}

get {
  url: {{baseUrl}}/api/errors/forbidden
  body: none
  auth: inherit
}
